# iso14001-rules-check-tools

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml
docs/: VERSIONING.md
docs/superpowers/plans/: 2026-06-12-iso14001-rules-check-tools-v0.4.0-catalog-expansion.md
docs/superpowers/specs/: 2026-06-03-iso14001-rules-check-tools-v0.1.1-ocr-stability-design.md  2026-06-08-iso14001-rules-check-tools-v0.3.0-false-positive-report-design.md  2026-06-12-iso14001-rules-check-tools-v0.4.0-catalog-expansion-design.md
src/iso14001_rules_check_tools/: clause_catalog.py  cli.py  matcher.py  models.py  ocr.py  pdf_reader.py  reporter.py  section_parser.py
tests/: conftest.py  test_cli.py  test_cli_csv.py  test_cli_json.py  test_cli_ocr.py  test_cli_pdf_reader.py  test_cli_section_parser.py  test_csv_reporting.py  test_docs.py  test_matcher.py  test_ocr.py  test_pdf_reader.py  test_section_parser.py  test_section_reporting.py
