[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "iso14001-rules-check-tools"
version = "0.1.0"
description = "ISO 14001 PDF rules checks for selectable-text and scanned PDFs with text and JSON output"
requires-python = ">=3.12"
dependencies = [
  "pypdf>=5.0.0",
  "pymupdf>=1.24.0",
  "pytesseract>=0.3.13",
  "Pillow>=10.0.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0.0", "reportlab>=4.0.0"]

[tool.pytest.ini_options]
pythonpath = ["src"]
